# knock-bank

./: .gitignore  README.md  docker-compose.yml
server/: .env.exemple  Dockerfile  Makefile  pyproject.toml
server/knockbankapi/: __init__.py
server/knockbankapi/app/: auth.py  deps.py
server/knockbankapi/app/controllers/: account_controller.py  auth_controller.py  transaction_controller.py
server/knockbankapi/app/schemas/: account.py  transaction.py
server/knockbankapi/domain/dto/: pagination.py  transaction.py
server/knockbankapi/domain/models/: __init__.py  account.py  person.py  transaction.py  user.py
server/knockbankapi/domain/services/: account_service.py  auth_service.py  transaction_service.py
server/knockbankapi/infra/: config.py
server/knockbankapi/infra/repositories/: account_repository.py  transaction_repository.py  user_repository.py
server/knockbankapi/infra/utils/: jwt.py
server/migrations/: env.py
server/migrations/versions/: 11ba600c4d43_renaming_transction_reciver_id_origin_.py  796cbec9b5ac_check_constraint_added.py  ce25e53603f8_rename_transaction_value_to_money.py  d8e65d29c60b_origin_account_can_be_null.py  ecc7085c20b2_creating_tables_in_english.py
server/src/app/: __init__.py  models.py  routes.py
server/src/app/account/: enums.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/app/auth/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
server/src/app/transaction/: enums.py  exceptions.py  models.py  repository.py  resumes.py  router.py  schemas.py  service.py
server/src/core/: config.py  db.py  log.py  security.py
server/src/migrations/: env.py
server/src/migrations/versions/: 11ba600c4d43_renaming_transction_reciver_id_origin_.py  37f8690dc83f_casting_transaction_datetime_to_.py  796cbec9b5ac_check_constraint_added.py  ce25e53603f8_rename_transaction_value_to_money.py  d8e65d29c60b_origin_account_can_be_null.py  ecc7085c20b2_creating_tables_in_english.py
server/src/tests/: conftest.py  test_app.py
server/src/tests/controllers/account_controller/: test_create_account.py  (+2 more)
server/src/tests/mocks/: __init__.py  account.py  transaction.py
server/src/utils/: crypt.py  schemas.py  token.py  validators.py
server/tests/: conftest.py  test_app.py
server/tests/controllers/account_controller/: test_create_account.py  test_get_account.py
server/tests/controllers/auth_controller/: test_login.py
server/tests/controllers/transaction_controller/: test_deposit_transaction.py  test_get_transaction.py  test_transfer_transaction.py
(+111 files in other folders)
